--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 * {
   margin: 0;
-  font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
 
 html,
 body {
   height: 100%;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -37,7 +37,7 @@ body {
 
 .column-info .name {
   margin-bottom: 5px;
-  font-size: 36px;
+  font-size: 45px;
 }
 
 .column-info .name,
@@ -46,7 +46,7 @@ body {
 }
 
 .column-info .about-me {
-  margin-top: calc(25px + 60px);
+  margin-top: calc(25px + 75px);
   border: white solid 1px;
   border-radius: 8px;
   padding: 15px;
@@ -59,7 +59,7 @@ body {
   font-weight: bold;
 }
 
-.column-info .about-me .description p {
+.column-info .about-me .description p:nth-child(2) {
   font-size: 14px;
   font-weight: 300;
 }
@@ -67,21 +67,21 @@ body {
 .column-info .about-me .avatar {
   background-color: white;
   border-radius: 100%;
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: -60px;
+  top: -75px;
   left: 0;
   right: 0;
-  padding: 10px;
+  padding: 25px;
 }
 
 .column-info .about-me .description {
-  margin-top: 60px;
+  margin-top: 75px;
 }
 
 .column-info .about-me .avatar p {
@@ -164,6 +164,10 @@ body {
   background-color: white;
 }
 
+.column-courses .course-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .course-item .course-title::before {
   content: "";
   display: block;
@@ -184,4 +188,122 @@ body {
   min-width: 150px;
   text-align: center;
   position: relative;
+}
+
+.course-item .course-content > :first-child {
+  margin-top: 14px;
+}
+
+.course-item .course-content > :not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.course-item .course-content .skills-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.course-item .course-content .skills-grid .grid-item {
+  justify-self: center;
+}
+
+.course-item .course-content .skills-grid .grid-item > p,
+.course-item .course-content .hobbies-grid .grid-item > p {
+  color: #847d7d;
+  font-size: 11px;
+  font-weight: 300;
+}
+
+.course-item .course-content .skills-grid .grid-item .circle {
+  width: 43px;
+  height: 43px;
+  border-radius: 100%;
+  background-color: #f0ecec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.course-item .course-content .skills-grid .grid-item .progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.course-item .course-content .skills-grid .grid-item .progress-bar {
+  position: absolute;
+  top: -7px;
+  left: -7px;
+  width: 43px;
+  height: 43px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  border: 3px solid white;
+  border-bottom-color: #2c8598;
+  border-right-color: #2c8598;
+  padding: 25px;
+}
+
+.course-item
+  .course-content
+  .skills-grid
+  .grid-item:nth-child(1)
+  .progress-bar {
+  transform: rotate(145deg);
+  border-top-color: #2c8598;
+}
+
+.course-item
+  .course-content
+  .skills-grid
+  .grid-item:nth-child(2)
+  .progress-bar {
+  transform: rotate(327deg);
+  border-top-color: #2c8598;
+}
+
+.course-item
+  .course-content
+  .skills-grid
+  .grid-item:nth-child(3)
+  .progress-bar {
+  transform: rotate(315deg);
+}
+
+.course-item
+  .course-content
+  .skills-grid
+  .grid-item:nth-child(4)
+  .progress-bar {
+  transform: rotate(145deg);
+}
+
+.course-item .course-content .skills-grid .grid-item .circle img {
+  width: 20px;
+}
+
+.course-item .course-subtitle {
+  color: #2c8598;
+}
+
+.course-item .course-description {
+  color: #847d7d;
+}
+
+.course-item .course-content .hobbies-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  text-align: center;
+}
+
+.course-item .course-content .hobbies-grid .grid-item img {
+  width: 26px;
+  margin: auto;
+  display: block;
+  margin-bottom: 7px;
 }
